--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -22,3 +22,25 @@
   </div>
 </body>
 </html>
+
+
+<!-- test html-->
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="Content-Script-Type" content="text/javascript">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
+<title>UI캠프 실습</title>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<link rel="stylesheet" type="text/css" href="css/test.css">
+</head>
+<body>
+
+
+	<p class="elip2"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</p>
+
+
+</body>
+</html>
