--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -41,6 +41,142 @@
 
 	<p class="elip2"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</p>
 
+	
+	
+		<section>
+				<ul class="list">
+					<li>
+						<a href="#" class="inner">
+							<div class="thumb">
+								<img src="thumb.png" alt="썸네일이미지">
+							</div>
+							<div class="title">
+								타이틀을 길게 써보도록 하겠습니다. 썸네일보다 길게
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="inner">
+							<div class="thumb">
+								<img src="thumb.png" alt="썸네일이미지">
+							</div>
+							<div class="title">
+								타이틀입니다.
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="inner">
+							<div class="thumb">
+								<img src="thumb.png" alt="썸네일이미지">
+							</div>
+							<div class="title">
+								타이틀입니다.
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="inner">
+							<div class="thumb">
+								<img src="thumb.png" alt="썸네일이미지">
+							</div>
+							<div class="title">
+								타이틀입니다.
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="inner">
+							<div class="thumb">
+								<img src="thumb.png" alt="썸네일이미지">
+							</div>
+							<div class="title">
+								타이틀입니다.
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="inner">
+							<div class="thumb">
+								<img src="thumb.png" alt="썸네일이미지">
+							</div>
+							<div class="title">
+								타이틀입니다.
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="inner">
+							<div class="thumb">
+								<img src="thumb.png" alt="썸네일이미지">
+							</div>
+							<div class="title">
+								타이틀입니다.
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="inner">
+							<div class="thumb">
+								<img src="thumb.png" alt="썸네일이미지">
+							</div>
+							<div class="title">
+								타이틀입니다.
+							</div>
+						</a>
+					</li>
+					<li>
+						<a href="#" class="inner">
+							<div class="thumb">
+								<img src="thumb.png" alt="썸네일이미지">
+							</div>
+							<div class="title">
+								타이틀입니다.
+							</div>
+						</a>
+					</li>
+				</ul>
+			</section>
+	
+	
+	<!--form setting -->
+	<form class="sendForm" action="#" method="post" >
+
+		<div class="int_mobile_area" >
+			<span class="ps_box int_mobile">
+
+				<label for="phoneNo" class="lbl"></label>
+			</span>
+			<a href="#" class="btn_verify btn_primary" id="btnSend" role="button">
+				<span class="" style="float:right;">인증번호 받기</span>
+			</a>
+		</div>
+		<p><input type="text" placeholder="이름을 입력해주세요."></p>
+
+		<p><input type="password" placeholder="비밀번호를 입력해주세요."></p>
+
+		<p><textarea name="" id="" cols="30" rows="10" placeholder="문구를 입력해주세요."></textarea></p>
+
+
+	</form>
+	<br>
+
+	<form class="" action="index.html" method="post">
+		<fieldset style="width: 590px;">
+			<p>닉네임</p>
+			<input type="submit" value="전송하기" style="float:right; width:100px; height:50px;"> <br>
+			<label>이름: <input type="text"></label><br>
+			<label>주소: <input type="text"></label><br>
+		 </fieldset>
+		</form>
+
+	
+	
+	
+	
+			<footer>
+				Copyright © NAVER Corp. All Rights Reserved.
+			</footer>
 
 </body>
 </html>
