--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -348,3 +348,256 @@
 </html>
 
 
+
+////////////////////////////////////////////////// 920
+
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="Content-Script-Type" content="text/javascript">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
+	<title>UI캠프 실습</title>
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/test.css">
+</head>
+<body>
+	<!-- media 적용하여 해상도별 콘텐츠 표시 하기 위해 wrap으로 감싸줌 -->
+	<div class="wrap">
+
+		<header>
+			<a href="#" class="logo"><span class="FoodWith_logo">FoodWith</span></a>
+			<a  href="#" class="lg_aside" >
+				<span class="lg_ham"><span class="blind">확장영역 열기</span></span>
+			</a>
+			<!-- </div> -->
+			<nav>
+				<a href="#">About</a>
+				<a href="#">Work</a>
+				<a href="#">Contact</a>
+			</nav>
+
+		</header>
+
+
+		<section class="banner_area">
+
+			<a href="#" class="inner">
+
+				<img src="img/banner_strawberry.png" alt="배너이미지" width="250" height="180" >
+				<p class="elip2"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</p>
+				<br>
+				<hr width=8%>
+			</a>
+
+			<ul>
+				<li><div class="author_img">
+					<div class="img-cover">
+					</div></li>
+					<li>FULLMOON</li>
+				</ul>
+			</section>
+
+
+			<div class="highlights">
+				<section>
+					<div class="content">
+						<a href="#"><img src="img/thumbnail_pumpkin.jpg" alt="썸네일이미지" width="316" height="316"></a>
+					</div>
+				</section>
+
+				<section>
+					<div class="content">
+						<a href="#"><img src="img/thumbnail_lime.jpg" alt="썸네일이미지" width="316" height="316"></a>
+					</div>
+				</section>
+
+				<section>
+					<div class="content">
+						<a href="#"><img src="img/thumbnail_paprika.jpg" alt="썸네일이미지" width="316" height="316"></a>
+					</div>
+				</section>
+
+				<section>
+					<div class="content">
+						<a href="#"><img src="img/thumbnail_garlic.jpg" alt="썸네일이미지" width="316" height="316"></a>
+					</div>
+				</section>
+
+				<section>
+					<div class="content">
+						<a href="#"><img src="img/thumbnail_onion.jpg" alt="썸네일이미지" width="316" height="316"></a>
+					</div>
+				</section>
+
+				<section>
+					<div class="content">
+						<a href="#"><img src="img/thumbnail_avocado.jpg" alt="썸네일이미지" width="316" height="316"></a>
+					</div>
+				</section>
+
+				<div class="more_item" width="988" height="60">
+					<img src="img/icon_arrow_more.png" width= "15" height= "17">
+					 더보기
+				 </div>
+
+			</div>
+
+
+
+			<!--
+			<section class="list_area">
+
+			<ul class="list">
+			<li>
+			<a href="#" class="inner">
+			<div class="thumb">
+			<img src="img/thumbnail_pumpkin.jpg" alt="썸네일이미지" width="316" height="316">
+		</div>
+		<div class="title">
+		타이틀입니다.
+	</div>
+</li>
+
+<li>
+<a href="#" class="inner">
+<div class="thumb">
+<img src="img/thumbnail_pumpkin.jpg" alt="썸네일이미지" width="316" height="316">
+</div>
+<div class="title">
+타이틀입니다.
+</div>
+</li>
+
+
+
+</ul>
+</section> -->
+
+
+
+<!--
+<section class="list_area">
+<ul class="list">
+<li>
+<a href="#" class="inner">
+<div class="thumb">
+<img src="img/thumbnail_pumpkin.jpg" alt="썸네일이미지">
+</div>
+<div class="title">
+타이틀입니다.
+</div>
+</a>
+</li>
+<li>
+<a href="#" class="inner">
+<div class="thumb">
+<img src="img/thumbnail_lime.jpg" alt="썸네일이미지">
+</div>
+<div class="title">
+타이틀입니다.
+</div>
+</a>
+</li>
+<li>
+<a href="#" class="inner">
+<div class="thumb">
+<img src="img/thumbnail_paprika.jpg" alt="썸네일이미지">
+</div>
+<div class="title">
+타이틀입니다.
+</div>
+</a>
+</li>
+<li>
+<a href="#" class="inner">
+<div class="thumb">
+<img src="img/thumbnail_garlic.jpg" alt="썸네일이미지">
+</div>
+<div class="title">
+타이틀입니다.
+</div>
+</a>
+</li>
+<li>
+<a href="#" class="inner">
+<div class="thumb">
+<img src="img/thumbnail_onion.jpg" alt="썸네일이미지">
+</div>
+<div class="title">
+타이틀입니다.
+</div>
+</a>
+</li>
+<li>
+<a href="#" class="inner">
+<div class="thumb">
+<img src="img/thumbnail_avocado.jpg" alt="썸네일이미지">
+</div>
+<div class="title">
+타이틀입니다.
+</div>
+</a>
+</li>
+</ul>
+</section>
+
+
+
+<footer>
+© foodwith All Rights Reserved.
+</footer> -->
+
+</div>
+</body>
+</html>
+
+
+
+
+
+
+
+<!--
+<form class="sendForm" action="#" method="post" >
+
+<div class="int_mobile_area" >
+<span class="ps_box int_mobile">
+
+<label for="phoneNo" class="lbl"></label>
+</span>
+<a href="#" class="btn_verify btn_primary" id="btnSend" role="button">
+<span class="" style="float:right;">인증번호 받기</span>
+</a>
+</div>
+<p><input type="text" placeholder="이름을 입력해주세요."></p>
+
+<p><input type="password" placeholder="비밀번호를 입력해주세요."></p>
+
+<p><textarea name="" id="" cols="30" rows="10" placeholder="문구를 입력해주세요."></textarea></p>
+
+
+</form>
+<br>
+
+<form class="" action="index.html" method="post">
+<fieldset style="width: 590px;">
+<p>닉네임</p>
+<input type="submit" value="전송하기" style="float:right; width:100px; height:50px;"> <br>
+<label>이름: <input type="text"></label><br>
+<label>주소: <input type="text"></label><br>
+</fieldset>
+</form>
+-->
+
+
+
+
+
+
+
+</body>
+</html>
+
+
