--- a/projectC/test.html
+++ b/projectC/test.html
@@ -12,18 +12,38 @@
 
 <body>
 
- <header>
+  <header>
     <div class="wrap">
       <h1><a href="#"><span class="blind">Foodwith</span></a></h1>
 
-        <ul class="menu">
-          <li><a href="#" >About</a></li>
-          <li><a href="#" >Work</a></li>
-          <li><a href="#" >Contact</a></li>
-        </ul>
+      <ul class="menu">
+        <li><a href="#" >About</a></li>
+        <li><a href="#" >Work</a></li>
+        <li><a href="#" >Contact</a></li>
+      </ul>
 
     </div>
   </header>
+
+
+  <div class="banner">
+
+    <div class="wrap">
+
+
+      <div class="content">
+        <p class="elip"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</p>
+        <div class="cross_bar">
+          
+        </div>
+      </div>
+      <div class="aside"><img src="img/banner_strawberry.png" alt="딸기 이미지" width="500" height="360" ></div>
+
+
+    </div>
+
+  </div>
+
 
 </body>
 
