--- a/projectC/test.html
+++ b/projectC/test.html
@@ -33,9 +33,8 @@
 
       <div class="content">
         <p class="elip"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</p>
-        <div class="cross_bar">
-          
-        </div>
+        <div class="cross_bar"></div>
+        <div class="user_thumbnail"><img src="img/thumbnail_profile.jpg" alt="사용자 사진"></div><span class="user_nickname"> FULLMOON</span>
       </div>
       <div class="aside"><img src="img/banner_strawberry.png" alt="딸기 이미지" width="500" height="360" ></div>
 
@@ -45,7 +44,10 @@
   </div>
 
 
+
+
 </body>
 
 
 </html>
+
