--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,603 +1,194 @@
 <!DOCTYPE html>
-<html lang="ko" dir="ltr">
+<html lang="ko">
 <head>
   <meta charset="utf-8">
-  <title>portfolio</title>
-  <link rel="stylesheet" href="css/portfolio.css">
+  <meta http-equiv="Content-Script-Type" content="text/javascript">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
+  <title>UI캠프 실습</title>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/test.css">
+
+
 </head>
+
+
 <body>
-  <div class="header">
-    <div class="area_flex">
-      <div class="area_contents">
-        <div class="vertical-align">
-          <p>포트폴리오</p>
-        </div>
-      </div>
+
+  <header>
+    <div class="wrap">
+      <a href="#" class="item_link"><h1><span class="blind">Foodwith</span></h1></a>
+
+      <ul class="menu">
+        <li><a href="#" >About</a></li>
+        <li><a href="#" >Work</a></li>
+        <li><a href="#" >Contact</a></li>
+      </ul>
+
     </div>
+  </header>
+
+
+  <div class="banner">
+
+    <div class="wrap">
+
+
+      <div class="content">
+        <p class="elip"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</p>
+        <div class="cross_bar"></div>
+        <div class="user_thumbnail"><img src="img/thumbnail_profile.jpg" alt="사용자 사진"></div><span class="user_nickname"> FULLMOON</span>
+      </div>
+      <div class="aside"><img src="img/banner_strawberry.png" alt="딸기 이미지" width="500" height="360" ></div>
+
+
+    </div>
+
   </div>
 
-  <div class="container" role="main">
+
+
+  <div class="thumbnail_area">
+
+
+    <div class="wrap">
+
+      <ul class="main_list">
+        <li><a href="#" class="item_link">
+          <div class="img_wrap"><img src="img/thumbnail_pumpkin.jpg" alt="호박 이미지" width="316" height="316"></div>
+          <div class="info">
+            <p class="title">따뜻 담백 호박! 든든한 호박죽으로 ⋯</p>
+          </div>
+        </a>
+      </li>
+
+      <li><a href="#" class="item_link">
+        <div class="img_wrap">
+        <img src="img/thumbnail_lime.jpg" alt="호박 이미지" width="316" height="316" >
+        </div>
+        <div class="info">
+          <p class="title">상큼한 라임청 담기</p>
+        </div>
+      </a></li>
+
+      <li><a href="#" class="item_link">
+        <div class="img_wrap">
+          <img src="img/thumbnail_paprika.jpg" alt="호박 이미지" width="316" height="316"></div>
+        <div class="info">
+          <p class="title">아삭아삭 빨간 피망 볶음 레시피</p>
+        </div>
+      </a></li>
+      <li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_garlic.jpg" alt="호박 이미지" width="316" height="316"></div>
+        <div class="info">
+          <p class="title">바삭바삭 마늘빵 만들기</p>
+        </div>
+      </a></li>
+      <li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_onion.jpg" alt="호박 이미지" width="316" height="316"></div>
+        <div class="info">
+          <p class="title">자색 빛깔 적양파 피클 담기</p>
+        </div>
+      </a></li>
+      <li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_avocado.jpg" alt="호박 이미지" width="316" height="316"></div>
+        <div class="info">
+          <p class="title">건강한 아보카도 샌드위치 만들기</p>
+        </div>
+      </a></li>
+      <input value="더보기" type="button" class="more-area" >
+    </ul>
+  </div>
+</div>
+
+
+<div class="message_form">
+
+  <div class="wrap">
+
+
+    <div class="message_form_content">
+      <p> 전하고 싶은 말을 남겨주세요.</p>
+      <strong> 답변을 원하시면 이메일을 꼭 적어주세요.</strong>
+    </div>
+    <div class="message_form_aside">
+
+      <form name="input" action="#.jsp" method="get">
+        <fieldset>
+          <!-- <legend>개인 정보 입력</legend> -->
+          <label for='nickname'>닉네임</label>
+          <input type="text" id ='nickname' name="nickname" autocomplete = "off" placeholder= "NICKNAME" >
+          <label for='email'>이메일</label>
+          <input type="email" name="email" id="email" autocomplete = "off" placeholder= "ID">@
+          <select>
+            <option value="선택하세요">선택하세요</option>
+            <option value="naver">naver.com</option>
+          </select>
+          <textarea name="feedback" rows="10" cols="50" maxlength="500" placeholder="전하고 싶은 말을 100자 이내로 적어주세요."></textarea>
+          <button type="submit" value="제출">전송하기</button>
+        </fieldset>
+      </form>
+
+
+    </div>
 
 
   </div>
-</body>
-</html>
 
-
-<!-- test html-->
-
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="Content-Script-Type" content="text/javascript">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
-<title>UI캠프 실습</title>
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<link rel="stylesheet" type="text/css" href="css/test.css">
-</head>
-<body>
-
-
-	<p class="elip2"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</p>
-
-	
-	
-		<section>
-				<ul class="list">
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="thumb.png" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀을 길게 써보도록 하겠습니다. 썸네일보다 길게
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="thumb.png" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="thumb.png" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="thumb.png" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="thumb.png" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="thumb.png" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="thumb.png" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="thumb.png" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="thumb.png" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-				</ul>
-			</section>
-	
-	
-	<!--form setting -->
-	<form class="sendForm" action="#" method="post" >
-
-		<div class="int_mobile_area" >
-			<span class="ps_box int_mobile">
-
-				<label for="phoneNo" class="lbl"></label>
-			</span>
-			<a href="#" class="btn_verify btn_primary" id="btnSend" role="button">
-				<span class="" style="float:right;">인증번호 받기</span>
-			</a>
-		</div>
-		<p><input type="text" placeholder="이름을 입력해주세요."></p>
-
-		<p><input type="password" placeholder="비밀번호를 입력해주세요."></p>
-
-		<p><textarea name="" id="" cols="30" rows="10" placeholder="문구를 입력해주세요."></textarea></p>
-
-
-	</form>
-	<br>
-
-	<form class="" action="index.html" method="post">
-		<fieldset style="width: 590px;">
-			<p>닉네임</p>
-			<input type="submit" value="전송하기" style="float:right; width:100px; height:50px;"> <br>
-			<label>이름: <input type="text"></label><br>
-			<label>주소: <input type="text"></label><br>
-		 </fieldset>
-		</form>
-
-	
-	
-	
-	
-			<footer>
-				Copyright © NAVER Corp. All Rights Reserved.
-			</footer>
-
-</body>
-</html>
-
-
-
-///////////////////////////////////////////////////////////////////////////////////
-2019/9/20 작성
-///////////////////////////////////////////////////////////////////////////////////
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="Content-Script-Type" content="text/javascript">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
-	<title>UI캠프 실습</title>
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/test.css">
-</head>
-<body>
-	<!-- media 적용하여 해상도별 콘텐츠 표시 하기 위해 wrap으로 감싸줌 -->
-	<div class="wrap">
-
-		<header>
-			<a href="#" class="logo"><span class="FoodWith_logo">FoodWith</span></a>
-			<a  href="#" class="lg_aside" >
-				<span class="lg_ham"><span class="blind">확장영역 열기</span></span>
-			</a>
-			<!-- </div> -->
-			<nav>
-				<a href="#">About</a>
-				<a href="#">Work</a>
-				<a href="#">Contact</a>
-			</nav>
-		</header>
-		<section class="banner_area">
-
-			<a href="#" class="inner">
-
-				<img src="img/banner_strawberry.png" alt="배너이미지" width="250" height="180" >
-				<p class="elip2"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</p>
-				<br>
-				<hr width=8%>
-			</a>
-
-			<ul>
-				<li><div class="author_img">
-					<div class="img-cover">
-					</div></li>
-					<li>FULLMOON</li>
-				</ul>
-			</section>
-
-
-			<section class="list_area">
-				<ul class="list">
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="img/thumbnail_pumpkin.jpg" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="img/thumbnail_lime.jpg" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="img/thumbnail_paprika.jpg" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="img/thumbnail_garlic.jpg" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="img/thumbnail_onion.jpg" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-					<li>
-						<a href="#" class="inner">
-							<div class="thumb">
-								<img src="img/thumbnail_avocado.jpg" alt="썸네일이미지">
-							</div>
-							<div class="title">
-								타이틀입니다.
-							</div>
-						</a>
-					</li>
-				</ul>
-			</section>
-
-
-
-			<footer>
-				© foodwith All Rights Reserved.
-			</footer>
-
-		</div>
-	</body>
-	</html>
-
-
-
-
-
-
-
-	<!--
-	<form class="sendForm" action="#" method="post" >
-
-	<div class="int_mobile_area" >
-	<span class="ps_box int_mobile">
-
-	<label for="phoneNo" class="lbl"></label>
-</span>
-<a href="#" class="btn_verify btn_primary" id="btnSend" role="button">
-<span class="" style="float:right;">인증번호 받기</span>
-</a>
 </div>
-<p><input type="text" placeholder="이름을 입력해주세요."></p>
-
-<p><input type="password" placeholder="비밀번호를 입력해주세요."></p>
-
-<p><textarea name="" id="" cols="30" rows="10" placeholder="문구를 입력해주세요."></textarea></p>
-
-
-</form>
-<br>
-
-<form class="" action="index.html" method="post">
-<fieldset style="width: 590px;">
-<p>닉네임</p>
-<input type="submit" value="전송하기" style="float:right; width:100px; height:50px;"> <br>
-<label>이름: <input type="text"></label><br>
-<label>주소: <input type="text"></label><br>
-</fieldset>
-</form>
--->
-
-</body>
-</html>
 
 
 
-////////////////////////////////////////////////// 920
-
-
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="Content-Script-Type" content="text/javascript">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
-	<title>UI캠프 실습</title>
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/test.css">
-</head>
-<body>
-	<!-- media 적용하여 해상도별 콘텐츠 표시 하기 위해 wrap으로 감싸줌 -->
-	<div class="wrap">
-
-		<header>
-			<a href="#" class="logo"><span class="FoodWith_logo">FoodWith</span></a>
-			<a  href="#" class="lg_aside" >
-				<span class="lg_ham"><span class="blind">확장영역 열기</span></span>
-			</a>
-			<!-- </div> -->
-			<nav>
-				<a href="#">About</a>
-				<a href="#">Work</a>
-				<a href="#">Contact</a>
-			</nav>
-
-		</header>
-
-
-		<section class="banner_area">
-
-			<a href="#" class="inner">
-
-				<img src="img/banner_strawberry.png" alt="배너이미지" width="250" height="180" >
-				<p class="elip2"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</p>
-				<br>
-				<hr width=8%>
-			</a>
-
-			<ul>
-				<li><div class="author_img">
-					<div class="img-cover">
-					</div></li>
-					<li>FULLMOON</li>
-				</ul>
-			</section>
-
-
-			<div class="highlights">
-				<section>
-					<div class="content">
-						<a href="#"><img src="img/thumbnail_pumpkin.jpg" alt="썸네일이미지" width="316" height="316"></a>
-					</div>
-				</section>
-
-				<section>
-					<div class="content">
-						<a href="#"><img src="img/thumbnail_lime.jpg" alt="썸네일이미지" width="316" height="316"></a>
-					</div>
-				</section>
-
-				<section>
-					<div class="content">
-						<a href="#"><img src="img/thumbnail_paprika.jpg" alt="썸네일이미지" width="316" height="316"></a>
-					</div>
-				</section>
-
-				<section>
-					<div class="content">
-						<a href="#"><img src="img/thumbnail_garlic.jpg" alt="썸네일이미지" width="316" height="316"></a>
-					</div>
-				</section>
-
-				<section>
-					<div class="content">
-						<a href="#"><img src="img/thumbnail_onion.jpg" alt="썸네일이미지" width="316" height="316"></a>
-					</div>
-				</section>
-
-				<section>
-					<div class="content">
-						<a href="#"><img src="img/thumbnail_avocado.jpg" alt="썸네일이미지" width="316" height="316"></a>
-					</div>
-				</section>
-
-				<div class="more_item" width="988" height="60">
-					<img src="img/icon_arrow_more.png" width= "15" height= "17">
-					 더보기
-				 </div>
-
-			</div>
 
 
 
-			<!--
-			<section class="list_area">
+<div class="notice">
 
-			<ul class="list">
-			<li>
-			<a href="#" class="inner">
-			<div class="thumb">
-			<img src="img/thumbnail_pumpkin.jpg" alt="썸네일이미지" width="316" height="316">
-		</div>
-		<div class="title">
-		타이틀입니다.
-	</div>
-</li>
+  <div class="wrap">
 
-<li>
-<a href="#" class="inner">
-<div class="thumb">
-<img src="img/thumbnail_pumpkin.jpg" alt="썸네일이미지" width="316" height="316">
+    <div class="notice_content">
+      <a href="#"><strong>공지사항</strong></a>
+    </div>
+
+    <div class="notice_content ">
+      <p class="txt_line">다양한 소식을 담은 foodwith! 정식 오픈을 안내드립니다.</p>
+
+      <a href="#" ><button>더보기</button></a>
+
+    </div>
+
+
+    <div class="cross_long_bar"></div>
+
+    <div class="notice_content">
+      <a href="#"><strong>Creators</strong><span class="detail_contents">푸드 크리에이터</span> <span class="vertical_bar"></span>  <span class="detail_contents">푸드 비즈니스</span></a>
+    </div>
+
+    <div class="notice_content">
+      <a href="#"><strong>Partners</strong><span class="detail_contents">푸드 파트너</span> <span class="vertical_bar"></span>  <span class="detail_contents">푸드 스토어</span></a>
+    </div>
+
+
+  </div>
+
 </div>
-<div class="title">
-타이틀입니다.
-</div>
-</li>
-
-
-
-</ul>
-</section> -->
-
-
-
-<!--
-<section class="list_area">
-<ul class="list">
-<li>
-<a href="#" class="inner">
-<div class="thumb">
-<img src="img/thumbnail_pumpkin.jpg" alt="썸네일이미지">
-</div>
-<div class="title">
-타이틀입니다.
-</div>
-</a>
-</li>
-<li>
-<a href="#" class="inner">
-<div class="thumb">
-<img src="img/thumbnail_lime.jpg" alt="썸네일이미지">
-</div>
-<div class="title">
-타이틀입니다.
-</div>
-</a>
-</li>
-<li>
-<a href="#" class="inner">
-<div class="thumb">
-<img src="img/thumbnail_paprika.jpg" alt="썸네일이미지">
-</div>
-<div class="title">
-타이틀입니다.
-</div>
-</a>
-</li>
-<li>
-<a href="#" class="inner">
-<div class="thumb">
-<img src="img/thumbnail_garlic.jpg" alt="썸네일이미지">
-</div>
-<div class="title">
-타이틀입니다.
-</div>
-</a>
-</li>
-<li>
-<a href="#" class="inner">
-<div class="thumb">
-<img src="img/thumbnail_onion.jpg" alt="썸네일이미지">
-</div>
-<div class="title">
-타이틀입니다.
-</div>
-</a>
-</li>
-<li>
-<a href="#" class="inner">
-<div class="thumb">
-<img src="img/thumbnail_avocado.jpg" alt="썸네일이미지">
-</div>
-<div class="title">
-타이틀입니다.
-</div>
-</a>
-</li>
-</ul>
-</section>
-
 
 
 <footer>
-© foodwith All Rights Reserved.
-</footer> -->
 
-</div>
-</body>
-</html>
+  <div class="wrap">
 
+    <ul>
+      <li><a href="#">회사소개</a></li>
+      <li><a href="#">인재채용</a></li>
+      <li><a href="#">이용약관</a></li>
+      <li><a href="#">고객센터</a></li>
+    </ul>
 
+    <p>&copy; <b>foodwith</b> All Right Reserved.</p>
 
+  </div>
 
-
-
-
-<!--
-<form class="sendForm" action="#" method="post" >
-
-<div class="int_mobile_area" >
-<span class="ps_box int_mobile">
-
-<label for="phoneNo" class="lbl"></label>
-</span>
-<a href="#" class="btn_verify btn_primary" id="btnSend" role="button">
-<span class="" style="float:right;">인증번호 받기</span>
-</a>
-</div>
-<p><input type="text" placeholder="이름을 입력해주세요."></p>
-
-<p><input type="password" placeholder="비밀번호를 입력해주세요."></p>
-
-<p><textarea name="" id="" cols="30" rows="10" placeholder="문구를 입력해주세요."></textarea></p>
-
-
-</form>
-<br>
-
-<form class="" action="index.html" method="post">
-<fieldset style="width: 590px;">
-<p>닉네임</p>
-<input type="submit" value="전송하기" style="float:right; width:100px; height:50px;"> <br>
-<label>이름: <input type="text"></label><br>
-<label>주소: <input type="text"></label><br>
-</fieldset>
-</form>
--->
-
-
-
-
-
+</footer>
 
 
 </body>
+
+
 </html>
-
-
