--- a/projectC/test.html
+++ b/projectC/test.html
@@ -47,7 +47,7 @@
         <li><a href="#" class="item_link">
           <div class="img_wrap"><img src="img/thumbnail_pumpkin.jpg" alt="호박 이미지" width="316" height="316"></div>
           <div class="info">
-            <p class="title">따뜻 담백 호박! 든든한 호박죽으로 ⋯</p>
+            <p class="title">따뜻 담백 호박! 든든한 호박죽으로 한끼 해결</p>
           </div>
         </a>
       </li>
