--- a/projectC/test.html
+++ b/projectC/test.html
@@ -1,164 +1,175 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <!-- <meta http-equiv="Content-Script-Type" content="text/javascript"> -->
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
-  <title>UI캠프 실습</title>
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/test.css">
+	<meta charset="utf-8">
+	<!-- <meta http-equiv="Content-Script-Type" content="text/javascript"> -->
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
+	<title>UI캠프 실습</title>
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/portfolio.css">
 </head>
 
 
 <body>
 
 
-  <header>
-    <div class="wrap">
-      <a href="#" class="item_link"><h1><span class="blind">Foodwith</span></h1></a>
-      <ul class="menu">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Work</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-  </header>
+	<header>
+		<div class="wrap">
+			<a href="#" class="item_link"><h1><span class="blind">Foodwith</span></h1></a>
+			<ul class="menu">
+				<li><a href="#">About</a></li>
+				<li><a href="#">Work</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</div>
+	</header>
 
 
-  <div class="banner">
-    <div class="wrap">
-      <div class="bannertxt">
-        <h2 class="elip"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</h2>
-        <div class="cross_bar"></div>
-        <div class="user_thumbnail"><a href="#"><img src="img/thumbnail_profile.jpg" alt="사용자 사진"></a></div><span class="user_nickname"> FULLMOON</span>
-      </div>
-      <div class="aside"><img src="img/banner_strawberry.png" alt="딸기 이미지" width="500" height="360" ></div>
-    </div>
-  </div>
-
-
-
-  <div class="thumbnail_area">
-
-    <div class="wrap">
-      <ul class="main_list">
-        <li><a href="#" class="item_link">
-          <div class="img_wrap"><img src="img/thumbnail_pumpkin.jpg" alt="호박 이미지" width="316" height="316"></div>
-          <div class="info">
-            <p class="title">따뜻 담백 호박! 든든한 호박죽으로 한끼 해결</p>
-          </div>
-        </a>
-      </li>
-
-      <li><a href="#" class="item_link">
-        <div class="img_wrap">
-          <img src="img/thumbnail_lime.jpg" alt="호박 이미지" width="316" height="316" >
-        </div>
-        <div class="info">
-          <p class="title">상큼한 라임청 담기</p>
-        </div>
-      </a></li>
-
-      <li><a href="#" class="item_link">
-        <div class="img_wrap">
-          <img src="img/thumbnail_paprika.jpg" alt="호박 이미지" width="316" height="316"></div>
-          <div class="info">
-            <p class="title">아삭아삭 빨간 피망 볶음 레시피</p>
-          </div>
-        </a></li>
-        <li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_garlic.jpg" alt="호박 이미지" width="316" height="316"></div>
-          <div class="info">
-            <p class="title">바삭바삭 마늘빵 만들기</p>
-          </div>
-        </a></li>
-        <li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_onion.jpg" alt="호박 이미지" width="316" height="316"></div>
-          <div class="info">
-            <p class="title">자색 빛깔 적양파 피클 담기</p>
-          </div>
-        </a></li>
-        <li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_avocado.jpg" alt="호박 이미지" width="316" height="316"></div>
-          <div class="info">
-            <p class="title">건강한 아보카도 샌드위치 만들기</p>
-          </div>
-        </a></li>
-      </ul>
-
-      <button type="button" name="button">더보기</button>
-    </div>
-  </div>
-
-
-  <div class="message_form">
-    <div class="wrap_background">
-      <div class="message_form_content">
-        <h2> 전하고 싶은 말을 남겨주세요.</h2>
-        <strong> 답변을 원하시면 이메일을 꼭 적어주세요.</strong>
-      </div>
-      <div class="message_form_aside">
-
-        <form name="input" action="#.jsp" method="get">
-          <fieldset>
-            <!-- <legend>개인 정보 입력</legend> -->
-            <label for='nickname'>닉네임</label>
-            <input type="text" id ='nickname' name="nickname" autocomplete = "off" placeholder= "NICKNAME" >
-            <label for='email'>이메일</label>
-
-
-            <div class="mail_area">
-              <input type="email" name="email" id="email" autocomplete = "off" placeholder= "ID"><span>@<span>
-
-              <select name="mail">
-                <option value="">선택하세요</option>
-                <option value="주소">naver.com</option>
-              </select>
-            </div>
-
-            <textarea name="feedback" rows="10" cols="50" maxlength="500" placeholder="전하고 싶은 말을 100자 이내로 적어주세요."></textarea>
-            <button type="submit" value="제출">전송하기</button>
-          </fieldset>
-        </form>
-      </div>
-    </div>
-  </div>
+	<div class="banner">
+		<div class="wrap">
+			<div class="bannertxt">
+				<h2 class="elip"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</h2>
+				<div class="cross_bar"></div>
+				<div class="user_thumbnail"><a href="#"><img src="img/thumbnail_profile.jpg" alt="사용자 사진"></a></div><span class="user_nickname"> FULLMOON</span>
+			</div>
+			<div class="aside"><img src="img/banner_strawberry.png" alt="딸기 이미지" width="500" height="360" ></div>
+		</div>
+	</div>
 
 
 
-  <div class="notice">
-    <div class="wrap">
-      <div class="notice_content">
-        <a href="#"><h3>공지사항</h3></a>
-      </div>
-      <div class="notice_content ">
-        <p class="txt_line">다양한 소식을 담은 foodwith! 정식 오픈을 안내드립니다.</p>
-        <button>더보기</button>
-      </div>
+	<div class="thumbnail_area">
 
-      <div class="cross_long_bar"></div>
+		<div class="wrap">
+			<ul class="main_list">
+				<li><a href="#" class="item_link">
+					<div class="img_wrap"><img src="img/thumbnail_pumpkin.jpg" alt="호박 이미지" width="316" height="316"></div>
+					<div class="info">
+						<p class="title">따뜻 담백 호박! 든든한 호박죽으로 한끼 해결</p>
+					</div>
+				</a>
+			</li>
 
-      <div class="notice_content">
-        <h3>Creators</h3><a href="#"><span class="detail_contents">푸드 크리에이터</span>
-          <span class="vertical_bar"></span>  <span class="detail_contents">푸드 비즈니스</span></a>
-      </div>
-      <div class="notice_content">
-        <h3>Partners</h3><a href="#"><span class="detail_contents">푸드 파트너</span>
-          <span class="vertical_bar"></span>  <span class="detail_contents">푸드 스토어</span></a>
-      </div>
-    </div>
-  </div>
+			<li><a href="#" class="item_link">
+				<div class="img_wrap">
+					<img src="img/thumbnail_lime.jpg" alt="호박 이미지" width="316" height="316" >
+				</div>
+				<div class="info">
+					<p class="title">상큼한 라임청 담기</p>
+				</div>
+			</a></li>
+
+			<li><a href="#" class="item_link">
+				<div class="img_wrap">
+					<img src="img/thumbnail_paprika.jpg" alt="호박 이미지" width="316" height="316"></div>
+					<div class="info">
+						<p class="title">아삭아삭 빨간 피망 볶음 레시피</p>
+					</div>
+				</a></li>
+				<li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_garlic.jpg" alt="호박 이미지" width="316" height="316"></div>
+					<div class="info">
+						<p class="title">바삭바삭 마늘빵 만들기</p>
+					</div>
+				</a></li>
+				<li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_onion.jpg" alt="호박 이미지" width="316" height="316"></div>
+					<div class="info">
+						<p class="title">자색 빛깔 적양파 피클 담기</p>
+					</div>
+				</a></li>
+				<li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_avocado.jpg" alt="호박 이미지" width="316" height="316"></div>
+					<div class="info">
+						<p class="title">건강한 아보카도 샌드위치 만들기</p>
+					</div>
+				</a></li>
+			</ul>
+
+			<button type="button" name="button">더보기</button>
+		</div>
+	</div>
 
 
-  <footer>
-    <div class="wrap">
-      <ul>
-        <li><a href="#">회사소개</a></li>
-        <li><a href="#">인재채용</a></li>
-        <li><a href="#">이용약관</a></li>
-        <li><a href="#">고객센터</a></li>
-      </ul>
-      <p>&copy; <Strong>foodwith</Strong> All Right Reserved.</p>
-    </div>
-  </footer>
+	<div class="message_form">
+		<div class="wrap_background">
+			<div class="message_form_content">
+				<h2> 전하고 싶은 말을 남겨주세요.</h2>
+				<strong> 답변을 원하시면 이메일을 꼭 적어주세요.</strong>
+			</div>
+			<div class="message_form_aside">
+
+				<form name="input" action="#.jsp" method="get">
+					<fieldset>
+						<!-- <legend>개인 정보 입력</legend> -->
+						<label for='nickname'>닉네임</label>
+						<input type="text" id ='nickname' name="nickname" autocomplete = "off" placeholder= "NICKNAME" >
 
 
-</body>
-</html>
+						<label for='email'>이메일</label>
+
+						<div class="mail_area">
+							<input type="email" name="email" id="email" autocomplete = "off" placeholder= "ID">
+								<p>@</p>
+								<select name="mail">
+									<option value="">선택하세요</option>
+									<option value="주소">naver.com</option>
+								</select>
+							</div>
+
+							<textarea name="feedback" rows="10" cols="50" maxlength="500" placeholder="전하고 싶은 말을 100자 이내로 적어주세요."></textarea>
+							<button type="submit" value="제출">전송하기</button>
+						</fieldset>
+					</form>
+				</div>
+			</div>
+		</div>
+
+
+
+		<div class="notice">
+			<div class="wrap">
+				<div class="notice_content">
+					<a href="#"><h3>공지사항</h3></a>
+				</div>
+				<div class="notice_content ">
+					<strong class="txt_line">다양한 소식을 담은 foodwith! 정식 오픈을 안내드립니다.</strong>
+					<button>더보기</button>
+				</div>
+
+				<div class="cross_long_bar"></div>
+
+				<div class="notice_content">
+					<h3>Creators</h3>
+					<ul>
+						<a href="#"><li class="detail_contents">푸드 크리에이터</li></a>
+						<span class="vertical_bar"></span>
+						<a href="#"><li class="detail_contents">푸드 비즈니스</li></a>
+					</ul>
+
+				</div>
+				<div class="notice_content">
+					<h3>Partners</h3>
+					<ul>
+						<a href="#"><li class="detail_contents">푸드 파트너</li></a>
+						<span class="vertical_bar"></span>
+						<a href="#"><li class="detail_contents">푸드 스토어</li></a>
+					</ul>
+
+				</div>
+			</div>
+		</div>
+
+
+		<footer>
+			<div class="wrap">
+				<ul>
+					<li><a href="#">회사소개</a></li>
+					<li><a href="#">인재채용</a></li>
+					<li><a href="#">이용약관</a></li>
+					<li><a href="#">고객센터</a></li>
+				</ul>
+				<p>&copy; <Strong>foodwith</Strong> All Right Reserved.</p>
+			</div>
+		</footer>
+
+
+	</body>
+	</html>
