--- a/projectC/test.html
+++ b/projectC/test.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
 	<title>UI캠프 실습</title>
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/portfolio.css">
+	<link rel="stylesheet" type="text/css" href="css/test.css">
 </head>
 
 
@@ -52,7 +52,7 @@
 
 			<li><a href="#" class="item_link">
 				<div class="img_wrap">
-					<img src="img/thumbnail_lime.jpg" alt="호박 이미지" width="316" height="316" >
+					<img src="img/thumbnail_lime.jpg" alt="라임 이미지" width="316" height="316" >
 				</div>
 				<div class="info">
 					<p class="title">상큼한 라임청 담기</p>
@@ -61,22 +61,22 @@
 
 			<li><a href="#" class="item_link">
 				<div class="img_wrap">
-					<img src="img/thumbnail_paprika.jpg" alt="호박 이미지" width="316" height="316"></div>
+					<img src="img/thumbnail_paprika.jpg" alt="파프리카 이미지" width="316" height="316"></div>
 					<div class="info">
 						<p class="title">아삭아삭 빨간 피망 볶음 레시피</p>
 					</div>
 				</a></li>
-				<li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_garlic.jpg" alt="호박 이미지" width="316" height="316"></div>
+				<li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_garlic.jpg" alt="마늘 이미지" width="316" height="316"></div>
 					<div class="info">
 						<p class="title">바삭바삭 마늘빵 만들기</p>
 					</div>
 				</a></li>
-				<li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_onion.jpg" alt="호박 이미지" width="316" height="316"></div>
+				<li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_onion.jpg" alt="양파 이미지" width="316" height="316"></div>
 					<div class="info">
 						<p class="title">자색 빛깔 적양파 피클 담기</p>
 					</div>
 				</a></li>
-				<li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_avocado.jpg" alt="호박 이미지" width="316" height="316"></div>
+				<li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_avocado.jpg" alt="아보카도 이미지" width="316" height="316"></div>
 					<div class="info">
 						<p class="title">건강한 아보카도 샌드위치 만들기</p>
 					</div>
