--- a/projectC/test.html
+++ b/projectC/test.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
 	<title>UI캠프 실습</title>
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/test.css">
+	<link rel="stylesheet" type="text/css" href="css/test0.css">
 </head>
 
 
@@ -30,7 +30,7 @@
 			<div class="bannertxt">
 				<h2 class="elip"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</h2>
 				<div class="cross_bar"></div>
-				<div class="user_thumbnail"><a href="#"><img src="img/thumbnail_profile.jpg" alt="사용자 사진"></a></div><span class="user_nickname"> FULLMOON</span>
+				<div class="user_thumbnail"><a href="#"><img src="img/thumbnail_profile.jpg" alt="사용자 사진"></a></div><strong class="user_nickname"> FULLMOON</strong>
 			</div>
 			<div class="aside"><img src="img/banner_strawberry.png" alt="딸기 이미지" width="500" height="360" ></div>
 		</div>
@@ -107,7 +107,9 @@
 
 						<div class="mail_area">
 							<input type="email" name="email" id="email" autocomplete = "off" placeholder= "ID">
-								<p>@</p>
+              
+              <span class="at">@</span>
+
 								<select name="mail">
 									<option value="">선택하세요</option>
 									<option value="주소">naver.com</option>
