--- a/projectC/test.html
+++ b/projectC/test.html
@@ -107,7 +107,7 @@
 
 						<div class="mail_area">
 							<input type="email" name="email" id="email" autocomplete = "off" placeholder= "ID">
-              
+
               <span class="at">@</span>
 
 								<select name="mail">
@@ -141,18 +141,16 @@
 				<div class="notice_content">
 					<h3>Creators</h3>
 					<ul>
-						<a href="#"><li class="detail_contents">푸드 크리에이터</li></a>
-						<span class="vertical_bar"></span>
-						<a href="#"><li class="detail_contents">푸드 비즈니스</li></a>
+						<li class="detail_contents"><a href="#">푸드 크리에이터 </a><span class="vertical_bar"></span></li>
+						<li class="detail_contents"><a href="#">푸드 비즈니스</a></li>
 					</ul>
 
 				</div>
 				<div class="notice_content">
 					<h3>Partners</h3>
 					<ul>
-						<a href="#"><li class="detail_contents">푸드 파트너</li></a>
-						<span class="vertical_bar"></span>
-						<a href="#"><li class="detail_contents">푸드 스토어</li></a>
+						<li class="detail_contents"><a href="#">푸드 파트너 </a><span class="vertical_bar"></span></li>
+						<li class="detail_contents"><a href="#">푸드 스토어 </a> </li>
 					</ul>
 
 				</div>
