--- a/projectC/test.html
+++ b/projectC/test.html
@@ -21,6 +21,7 @@
 				<li><a href="#">Work</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
+      <a href="#" class="gnb_menu">gnb menu</a>
 		</div>
 	</header>
 
