--- a/projectC/test.html
+++ b/projectC/test.html
@@ -30,7 +30,7 @@
 		<div class="wrap">
 			<div class="bannertxt">
 				<h2 class="elip"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</h2>
-				<div class="cross_bar"></div>
+				<div class="cross_bar"><span class="bar"></span></div>
 				<div class="user_thumbnail"><a href="#"><img src="img/thumbnail_profile.jpg" alt="사용자 사진"></a></div><strong class="user_nickname"> FULLMOON</strong>
 			</div>
 			<div class="aside"><img src="img/banner_strawberry.png" alt="딸기 이미지" width="500" height="360" ></div>
