--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,194 +1,91 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="Content-Script-Type" content="text/javascript">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
-  <title>UI캠프 실습</title>
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/test.css">
-
-
+	<meta charset="utf-8">
+	<!-- <meta http-equiv="Content-Script-Type" content="text/javascript"> -->
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
+	<title>UI캠프 실습</title>
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/viewer.css">
 </head>
 
 
 <body>
 
-  <header>
-    <div class="wrap">
-      <a href="#" class="item_link"><h1><span class="blind">Foodwith</span></h1></a>
 
-      <ul class="menu">
-        <li><a href="#" >About</a></li>
-        <li><a href="#" >Work</a></li>
-        <li><a href="#" >Contact</a></li>
-      </ul>
-
-    </div>
-  </header>
-
-
-  <div class="banner">
-
-    <div class="wrap">
-
-
-      <div class="content">
-        <p class="elip"> 오븐 없이도 베이킹 가능! 달콤 상큼 봄맞이 노오븐 딸기 케이크 만들기!</p>
-        <div class="cross_bar"></div>
-        <div class="user_thumbnail"><img src="img/thumbnail_profile.jpg" alt="사용자 사진"></div><span class="user_nickname"> FULLMOON</span>
-      </div>
-      <div class="aside"><img src="img/banner_strawberry.png" alt="딸기 이미지" width="500" height="360" ></div>
-
-
-    </div>
-
-  </div>
+	<div class="wrap">
+		<div class="container">
+			<div class="box1"></div>
+			<div class="box2"></div>
+			<div class="clear"></div>
+		</div>
+	</div>
 
 
 
-  <div class="thumbnail_area">
+	<header>
+		<div class="wrap">
+			<a href="#" class="item_link"><h1><span class="blind">Foodwith</span></h1></a>
+			<ul class="menu">
+				<li><a href="#">About</a></li>
+				<li><a href="#">Work</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+			<a href="#" class="gnb_menu">gnb menu</a>
+		</div>
+	</header>
 
-
-    <div class="wrap">
-
-      <ul class="main_list">
-        <li><a href="#" class="item_link">
-          <div class="img_wrap"><img src="img/thumbnail_pumpkin.jpg" alt="호박 이미지" width="316" height="316"></div>
-          <div class="info">
-            <p class="title">따뜻 담백 호박! 든든한 호박죽으로 ⋯</p>
-          </div>
-        </a>
-      </li>
-
-      <li><a href="#" class="item_link">
-        <div class="img_wrap">
-        <img src="img/thumbnail_lime.jpg" alt="호박 이미지" width="316" height="316" >
-        </div>
-        <div class="info">
-          <p class="title">상큼한 라임청 담기</p>
-        </div>
-      </a></li>
-
-      <li><a href="#" class="item_link">
-        <div class="img_wrap">
-          <img src="img/thumbnail_paprika.jpg" alt="호박 이미지" width="316" height="316"></div>
-        <div class="info">
-          <p class="title">아삭아삭 빨간 피망 볶음 레시피</p>
-        </div>
-      </a></li>
-      <li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_garlic.jpg" alt="호박 이미지" width="316" height="316"></div>
-        <div class="info">
-          <p class="title">바삭바삭 마늘빵 만들기</p>
-        </div>
-      </a></li>
-      <li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_onion.jpg" alt="호박 이미지" width="316" height="316"></div>
-        <div class="info">
-          <p class="title">자색 빛깔 적양파 피클 담기</p>
-        </div>
-      </a></li>
-      <li><a href="#" class="item_link"><div class="img_wrap"><img src="img/thumbnail_avocado.jpg" alt="호박 이미지" width="316" height="316"></div>
-        <div class="info">
-          <p class="title">건강한 아보카도 샌드위치 만들기</p>
-        </div>
-      </a></li>
-      <input value="더보기" type="button" class="more-area" >
-    </ul>
-  </div>
-</div>
-
-
-<div class="message_form">
-
-  <div class="wrap">
-
-
-    <div class="message_form_content">
-      <p> 전하고 싶은 말을 남겨주세요.</p>
-      <strong> 답변을 원하시면 이메일을 꼭 적어주세요.</strong>
-    </div>
-    <div class="message_form_aside">
-
-      <form name="input" action="#.jsp" method="get">
-        <fieldset>
-          <!-- <legend>개인 정보 입력</legend> -->
-          <label for='nickname'>닉네임</label>
-          <input type="text" id ='nickname' name="nickname" autocomplete = "off" placeholder= "NICKNAME" >
-          <label for='email'>이메일</label>
-          <input type="email" name="email" id="email" autocomplete = "off" placeholder= "ID">@
-          <select>
-            <option value="선택하세요">선택하세요</option>
-            <option value="naver">naver.com</option>
-          </select>
-          <textarea name="feedback" rows="10" cols="50" maxlength="500" placeholder="전하고 싶은 말을 100자 이내로 적어주세요."></textarea>
-          <button type="submit" value="제출">전송하기</button>
-        </fieldset>
-      </form>
-
-
-    </div>
-
-
-  </div>
-
-</div>
+	<section>
+		<div class="wrap">
+			<div class="info">
+				<h1>딸기 케이크</h1>
 
 
 
+				<ul>
+					<li>CHEF</li>
+					<li>FULLMOON</li>
+				</ul>
+
+				<ul>
+					<li>CATEGORY</li>
+					<li>디저트</li>
+				</ul>
 
 
+				<ul>
+					<li>DATE</li>
+					<li class="number_txt">2018.02.02</li>
+				</ul>
 
-<div class="notice">
-
-  <div class="wrap">
-
-    <div class="notice_content">
-      <a href="#"><strong>공지사항</strong></a>
-    </div>
-
-    <div class="notice_content ">
-      <p class="txt_line">다양한 소식을 담은 foodwith! 정식 오픈을 안내드립니다.</p>
-
-      <a href="#" ><button>더보기</button></a>
-
-    </div>
+				<ul>
+					<li>VIEW</li>
+					<li class="number_txt">2,356</li>
+				</ul>
+			</div>
 
 
-    <div class="cross_long_bar"></div>
+			<div class="cross_bar"> </div>
 
-    <div class="notice_content">
-      <a href="#"><strong>Creators</strong><span class="detail_contents">푸드 크리에이터</span> <span class="vertical_bar"></span>  <span class="detail_contents">푸드 비즈니스</span></a>
-    </div>
+			<h3>음식정보</h3>
 
-    <div class="notice_content">
-      <a href="#"><strong>Partners</strong><span class="detail_contents">푸드 파트너</span> <span class="vertical_bar"></span>  <span class="detail_contents">푸드 스토어</span></a>
-    </div>
+		</div>
 
 
-  </div>
+	</section>
 
-</div>
-
-
-<footer>
-
-  <div class="wrap">
-
-    <ul>
-      <li><a href="#">회사소개</a></li>
-      <li><a href="#">인재채용</a></li>
-      <li><a href="#">이용약관</a></li>
-      <li><a href="#">고객센터</a></li>
-    </ul>
-
-    <p>&copy; <b>foodwith</b> All Right Reserved.</p>
-
-  </div>
-
-</footer>
+	<footer>
+		<div class="wrap">
+			<ul>
+				<li><a href="#">회사소개</a></li>
+				<li><a href="#">인재채용</a></li>
+				<li><a href="#">이용약관</a></li>
+				<li><a href="#">고객센터</a></li>
+			</ul>
+			<p>&copy; <Strong>foodwith</Strong> All Right Reserved.</p>
+		</div>
+	</footer>
 
 
 </body>
-
-
 </html>
