--- a/projectC/test.html
+++ b/projectC/test.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=2.0,minimum-scale=1.0,user-scalable=yes">
 	<title>UI캠프 실습</title>
 	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/test0.css">
+	<link rel="stylesheet" type="text/css" href="css/test.css">
 </head>
 
 
@@ -84,7 +84,7 @@
 				</a></li>
 			</ul>
 
-			<button type="button" name="button">더보기</button>
+		<button type="button" name="button">더보기</button>
 		</div>
 	</div>
 
@@ -92,7 +92,7 @@
 	<div class="message_form">
 		<div class="wrap_background">
 			<div class="message_form_content">
-				<h2> 전하고 싶은 말을 남겨주세요.</h2>
+				<h2>전하고 싶은 말을 남겨주세요.</h2>
 				<strong> 답변을 원하시면 이메일을 꼭 적어주세요.</strong>
 			</div>
 			<div class="message_form_aside">
@@ -129,10 +129,10 @@
 
 		<div class="notice">
 			<div class="wrap">
-				<div class="notice_content">
+				<div class="notice_title">
 					<a href="#"><h3>공지사항</h3></a>
 				</div>
-				<div class="notice_content ">
+				<div class="notice_sub_title">
 					<strong class="txt_line">다양한 소식을 담은 foodwith! 정식 오픈을 안내드립니다.</strong>
 					<button>더보기</button>
 				</div>
