--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -37,11 +37,11 @@
 
 	<section>
 		<div class="wrap">
+
+			<h1>딸기 케이크</h1>
+
+
 			<div class="info">
-				<h1>딸기 케이크</h1>
-
-
-
 				<ul>
 					<li>CHEF</li>
 					<li>FULLMOON</li>
@@ -49,7 +49,7 @@
 
 				<ul>
 					<li>CATEGORY</li>
-					<li>디저트</li>
+					<li class="li-4n">디저트</li>
 				</ul>
 
 
@@ -60,14 +60,26 @@
 
 				<ul>
 					<li>VIEW</li>
-					<li class="number_txt">2,356</li>
+					<li class="number_txt li-4n">2,356</li>
 				</ul>
+
+
 			</div>
 
 
 			<div class="cross_bar"> </div>
 
-			<h3>음식정보</h3>
+			<dl>
+				<dt>음식정보</dt>
+				<dd>딸기를 주재료로 쓴 케이크 딸기를 토핑으로 쓰거나, 딸기를 갈아서 반죽에 넣은 케이크 <a href="#" target="_blank">https://terms.naver.com</a> </dd>
+			</dl>
+
+
+			<dl>
+				<dt>재료 및 분량</dt>
+				<dd>딸기, 밀가루 290g, 달걀 1개, 크림치즈 200g, 설탕 70g, 설탕 시럽, 생크림 160g, 물 100mL</dd>
+			</dl>
+
 
 		</div>
 
